--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card img {
+  width: 60%;
+  height: 200px;
+  border-radius: 2%;
+}
+.featured img {
+  width: 30%;
+  height: 30%;
+  border-radius: 10%;
+}
+.card {
+  height: 10%;
+  text-align: center;
+}
+.menu {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+  grid-auto-rows: minmax(100px, auto);
+  background-color: lightblue;
+}
+.input-text {
+  width: 30%;
+  background-color: lightgray;
+  color: black;
+}
+.nav-link{
+  display: inline-block;
+  box-sizing: border-box;
+  width: 20%;
+  padding: 5px;
+  margin: 0 6px 6px;
+  background: pink;
+  text-decoration: none;
+  text-align: center;
+  font-size: min(10vw, 15px) ;
+  color: darkblue;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.active {
+  color: red;
 }
