--- a/src/App.css
+++ b/src/App.css
@@ -1,45 +1,72 @@
 .App {
   text-align: center;
-}
-.card img {
-  width: 60%;
-  height: 200px;
-  border-radius: 2%;
-}
-.featured img {
-  width: 30%;
-  height: 30%;
-  border-radius: 10%;
-}
-.card {
-  height: 10%;
+  }
+  
+  .card {
   text-align: center;
-}
-.menu {
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  background-color: #fff;
+  }
+  
+  .card img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+  }
+  
+  .featured img {
+  width: 100%;
+  height: auto;
+  border-radius: 50%;
+  }
+  
+  .menu {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 10px;
-  grid-auto-rows: minmax(100px, auto);
-  background-color: lightblue;
-}
-.input-text {
-  width: 30%;
-  background-color: lightgray;
-  color: black;
-}
-.nav-link{
+  background-color: #f5f5f5;
+  padding: 20px;
+  border-radius: 5px;
+  }
+  
+  .input-text {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #f1f1f1;
+  color: #333;
+  }
+  
+  .nav-link {
   display: inline-block;
   box-sizing: border-box;
-  width: 20%;
-  padding: 5px;
-  margin: 0 6px 6px;
-  background: pink;
+  padding: 10px 20px;
+  margin: 0 6px;
+  background-color: #eb1b1b;
   text-decoration: none;
-  text-align: center;
-  font-size: min(10vw, 15px) ;
-  color: darkblue;
-}
+  font-size: 14px;
+  color: #fff;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+  }
+  
+  .nav-link:hover {
+  background-color: #eb1b1b;
+  }
+  
+  .active {
+  background-color: #eb1b1b;
+  }
 
-.active {
-  color: red;
-}
+  .search-bar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
+    margin-top: 20px
+  }
+  
+  
